Impl of switching db from header tenant id value

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,12 @@ run-environment=tenant_book_prod
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 hibernate.hbm2ddl.auto=create
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+tenant-names=tenant_book_default|tenant_book_test|tenant_book_prod
 
-persistence-tenant_book_dev.url=jdbc:mysql://localhost:3306/books
-persistence-tenant_book_dev.username=root
-persistence-tenant_book_dev.password=Mysqlpassword
-persistence-tenant_book_dev.driver-class-name=com.mysql.cj.jdbc.Driver
+persistence-tenant_book_default.url=jdbc:mysql://localhost:3306/books
+persistence-tenant_book_default.username=root
+persistence-tenant_book_default.password=Mysqlpassword
+persistence-tenant_book_default.driver-class-name=com.mysql.cj.jdbc.Driver
 
 persistence-tenant_book_test.url=jdbc:mysql://localhost:3306/books_test
 persistence-tenant_book_test.username=root
